cambio de mensaje

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>Feliz San Valentín</title>
+    <title>Feliz Día Gianella</title>
 </head>
 
 <body>
     <div class="valentines-day">
         <div class="envelope"></div>
         <div class="heart"></div>
-        <div class="text">¡FELIZ DÍA DE<br>SAN VALENTÍN!</div>
+        <!-- <div class="text">¡FELIZ DÍA DE<br>SAN VALENTÍN!</div> -->
+        <div class="text">¡FELIZ DÍA AMOR!</div>
         <div class="front"></div>
     </div>
 
@@ -24,18 +25,16 @@
         </div>
         <div class="side two">
             <h2>🌷🌷🌷</h2>
-            <p>Querido(a) [nombre],</p>
+            <p>Querida Gianella M.,</p>
             <p>
-                En este San Valentín, quiero recordarte lo especial que eres. Cada sonrisa compartida, cada momento
-                juntos es un tesoro. Eres una persona maravillosa, tanto por dentro como por fuera. Valoro cada instante
-                compartido. Gracias por ser quien eres. 🫶
+                Feliz Día de la Mujer, preciosa. Hoy es una fecha especial para celebrar a mujeres increíbles como tú. Me encanta la forma en que iluminas cada momento y estoy disfrutando mucho verte nuevamente. Espero que tengas un día tan hermoso como tú. 💕🫶
             </p>
             <p>
-                ¡Feliz San Valentín!
+                ¡Feliz Día de la Mujer, Guerrera!
             </p>
             <p>
                 Con cariño,<br>
-                [nombre]
+                Andrés P.
             </p>
         </div>
     </div>
